# larc-vsss-2025

./: .gitignore  README.md  nrf_transmitter.ino
Comms_examples/Examples_of_UDP_communications/: python_function_example.py
Comms_examples/Udp_examples/: esp32_listen.ino  function_example.py  listen_example.cpp
Comms_examples/radio_comms_test/: example_to_receive_data.ino
Cropping_transparent_images/: Rotating_changingbrigthness.py
Examples_of_UDP_communications/: test_listen_cpp_archive_from_esp32xiao.ino
Movement(Strategist and Control)/EstrategistCpp/: main.cpp
Movement(Strategist and Control)/InoCode/RobotCode/: RobotCode.ino  Velocities.cpp
Movement(Strategist and Control)/RobotMovement/RobotMovement/: RobotMovement.ino
Tests/Bluetooth Connections/: Bluethooth send.py  ESP32_bluetooth_direction.ino  ESP32_bluetooth_direction_1.0.ino  Untitled-1.py
Tests/EstrategistCpp/: Ball.cpp  Ball.h  CMakeLists.txt  Kinematic.cpp  Kinematic.h  Output.cpp  Robots.cpp  Robots.h  Transform.cpp  Transform.h  Vector2.cpp  Vector2.h  main.cpp
Tests/EstrategistCpp/src/Components/: Communication.cpp  Communication.h  ForceGenerator.cpp  ForceGenerator.h  Kinematic.cpp  Kinematic.h  Transform.cpp  Transform.h
Tests/EstrategistCpp/src/DataTypes/: Output.cpp  Output.h  Vector2.cpp  Vector2.h
Tests/EstrategistCpp/src/Entities/: Ball.cpp  Ball.h  CMakeLists.txt  Entity.cpp  Entity.h  Line.cpp  Line.h  Robot.cpp  Robot.h
Tests/EstrategistCpp/src/Vision_data/: Ballpos.cpp  Ballpos.h
Tests/Python_C#COM/: ImageProcessor.py  Strategist.sln
Tests/Python_C#COM/Strategist/: Program.cs
Tests/RF24L01 example codes/: LaptopArduinoComm.py  nrf_transmitter.ino
Tests/TestingConstants/new_receiver_void/: Kinematics.cpp  Kinematics.h  Output.cpp  PID.cpp  new_receiver_void.ino
Tests/updated_UPN_communications/Commnad_sender/: Commnad_sender.ino
Tests/updated_UPN_communications/Receiver_hbridge/: Kinematics.cpp  Kinematics.h  PID.cpp  PID.h  Receiver_hbridge.ino  new_receiver_void.ino
Tests/updated_UPN_communications/new_receiver_void/: Kinematics.cpp  Kinematics.h  new_receiver_void.ino
VSSSModel/: Model_training.ipynb
VSSS_modelM/: Model_trainingM.ipynb
alpha_UDP_communicatin/updated_UPN_communications/Commnad_sender/: Commnad_sender.ino
alpha_UDP_communicatin/updated_UPN_communications/Receiver_hbridge/: Kinematics.cpp  Receiver_hbridge.ino
alpha_prototype/NRF24L01_receiver_example/: NRF24L01_receiver_example.ino
dataset-generator/: create_dataset_home2024_GrounDino_segmentation.ipynb
dataset-generator/Resources/finalOutput/: data.yaml
docker/: README.md
docker/compose/: docker-compose.yml
docker/dockerfiles/: ros.dockerfile  vsss.dockerfile
docker/scripts/: entrypoint.sh  home_base.sh  rosdep_automation.sh  vsss_sim.sh
general-test (no commit)/: CoorSend.py  test1.py  test2.py  tets3.py
mainVision/: Model_use.py  generalVision.py
mainVision/calibration/: colorPicker.py
mainVision/libs/: size_measure.py
mainVision/test/: ballDetector.py  communicaation.py
mainVision/vision Integration/: Model_use.py  generalVision.py
src/vsss_simulation/src/: simulation_spawn.cpp
src/vsss_simulation/urdf/: camera.urdf  robot.urdf.xacro
test-vision/: CoorSend.py  FUSION.py  Model_use.py  Tracker.py  ballDetector.py  colorBall.py  colorPicker.py  colorPickerHSL.py  color_picker.py  color_segmentation.py  homography.py  import socket.py  kalman_filter.py  robotAndBallDetector.py  size_measure.py  test.py
vision/calibration/: colorPicker.py
vision/libs/: homography.py  size_measure.py
vision/test/: ballDetector.py  communicaation.py
vision/vision Integration/: Model_use.py  generalVision.py
vsss/: homography.npy  persMatrix.npy
vsss/Robotcodes/1_robot_TCP/: XIAO_robot_TCP.ino
vsss/Robotcodes/1_robot_UDP/: PID.hpp  XIAO_robot_UDP.ino
vsss/bag_files/sample_vel/: metadata.yaml  sample_vel_0.db3
vsss/communication/: CMakeLists.txt  package.xml
vsss/communication/config/: robot1_params.yaml  robots_params.yaml
vsss/communication/launch/: robot_tcp_clients.launch.py  robot_udp_clients.launch.py
vsss/communication/src/: robot_tcp_client_node.py  robot_udp_client_node.py
vsss/docker/compose/: .env  docker-compose-cpu-base.yml  docker-compose-cpu.yml  docker-compose-cuda-base.yml  docker-compose-cuda.yml  docker-compose.yml
vsss/docker/scripts/: vsss.sh  (+1 more)
vsss/esp32_movement/: PID.hpp  esp32_movement.ino  esp32_movement_robot1.ino  esp32_movement_robot2.ino
vsss/setups/: robot_attack__defender_config.rviz
vsss/vsss_simulation/: CMakeLists.txt  package.xml
vsss/vsss_simulation/config/: ball_odom2_tf.yaml  diff_drive_controllers.yaml
vsss/vsss_simulation/include/vsss_simulation/: Kinematic.hpp  Line.hpp  MathU.hpp  MsgConvert.hpp  Polygon.hpp  UnivectorF.hpp
vsss/vsss_simulation/launch/: FieldPositions.launch.py  irl_play.launch.py  robotSIM.launch.py  simulation_spawn.launch.py
vsss/vsss_simulation/msg/: RobotAction.msg
vsss/vsss_simulation/scripts/: RobotActionVisualizer.cpp  RobotController.cpp  Strategist.cpp  VectorGrapher.cpp  global_parameter_server_node.cpp
vsss/vsss_simulation/src/vsss_simulation/: Kinematic.cpp  Line.cpp  MathU.cpp  MsgConvert.cpp  Polygon.cpp  UnivectorF.cpp
vsss/vsss_simulation/urdf/: PistaVSSS_URDF.urdf  ball.urdf  camera.urdf  robot.urdf.xacro
vsss/vsss_simulation/worlds/: vsss_complete.world
vsss/vsss_simulation/worlds/vsss_world/: model.sdf
vsss/vsss_simulation/worlds/vsss_worlds/vsss_field/: model.config  model.sdf
vsss/vsss_simulation/worlds/vsss_worlds/vsss_field/meshes/: base_field.STL  field.dae
vsss_modelM/: Model_trainingM.ipynb
vsss_simulation/: CMakeLists.txt  package.xml
vsss_simulation/config/: ball_odom2_tf.yaml
vsss_simulation/include/vsss_simulation/: Kinematic.hpp  MathU.hpp  UnivectorF.hpp
vsss_simulation/launch/: robotSIM.launch.py
vsss_simulation/scripts/: DefaultController.py  RobotController.cpp  simulation_spawn.launch.py
vsss_simulation/src/vsss_simulation/: Kinematic.cpp  MathU.cpp  UnivectorF.cpp
vsss_simulation/urdf/: ball.urdf  robot.urdf.xacro
(+48 files in other folders)
